--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
